--- a/ZT_IM_SDK/Classes/SDKKit/Chat/View/Cell/ZTPictureLeftMessageCell.xib
+++ b/ZT_IM_SDK/Classes/SDKKit/Chat/View/Cell/ZTPictureLeftMessageCell.xib
@@ -44,7 +44,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sV8-qu-Fli">
                                 <rect key="frame" x="36" y="0.0" width="155" height="121.5"/>
                                 <subviews>
-                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="V60-ID-dAG">
+                                    <imageView contentMode="scaleAspectFill" semanticContentAttribute="forceLeftToRight" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="V60-ID-dAG">
                                         <rect key="frame" x="0.0" y="0.0" width="154.5" height="104.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="155" id="OPc-44-gnD"/>
